--- a/src/Components/Projects/projects.css
+++ b/src/Components/Projects/projects.css
@@ -2,6 +2,7 @@
     height: 100vh;
     width: 100%;
     display: flex;
+    margin: 50px 0;
     justify-content: center;
     align-items: center;
     flex-direction: column;;
@@ -30,22 +31,137 @@
 
 .projects-div {
     background: #FCFCFC;
-    height: 60%;
-    width: 65%;
-    margin-top: 30px;
+    height: 70%;
+    width: 70%;
+    margin-top: 50px;
+    margin-bottom: 50px;
     border-radius: 25px;
     border: solid 1px #D0CDCD;
     box-shadow: 5px 5px 11px rgb(41, 41, 41, 0.5) ;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    overflow: hidden;
 }
 
+
+.center {
+    height: 100%;
+    width: 100%;
+}
+
+
+.projects-carousel {
+    height: 15%;
+    width: 100%;
+    display: flex;
+}
+
+.project-option {
+    height: 100%;
+}
+.project-option > h1 {
+    font-size: 35px;
+    font-weight: bold;
+    display: flex;
+    justify-content: center;
+    height: 100%;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+.project-option:focus, .project-option:focus {
+    outline: none;
+    color: orange;
+}
+
+
+.projects-info {
+    height: 75%;
+    width: 100%;
+}
+
+
+.project-card {
+    height: 50vh;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;;
+}
+
+.pc-real {
+    height: 100%;
+    width: 100%; 
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+.project-image {
+    background: orange;
+    height: 95%;
+    width: 30%;
+}
+
+.p-info {
+    background: red;
+    height: 95%;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.p-info > h1 {
+    margin: 0;
+    font-size: 40px;
+    font-weight: bold;
+    font-family: Arial, Helvetica, sans-serif;
+    padding: 0;
+}
+.p-info > p {
+    margin: 20px 0;
+    font-size: 25px;
+    font-family: Arial, Helvetica, sans-serif;
+    width: 90%;
+
+}
+
+.p-builtwith {
+    height: 20%;
+    width: 90%;
+    background: blue;
+}
+
+.project-buttons {
+    height: 25%;
+    width: 90%;
+    background: green;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.project-buttons > button {
+    border : none;
+    width: 40%;
+    height: 60%;
+    border-radius: 100px;
+    cursor: pointer;
+}
+.project-buttons > button:focus {
+    outline: none;
+}
 
 
 @media screen and (max-width: 600px){
     .projects-div {
         width: 90%;
+        height: 65%;
     }
     .projects-title{
         height: 10%;
         width: 90%;
+
     }
 }
