--- a/src/Components/Skills/skills.css
+++ b/src/Components/Skills/skills.css
@@ -1,5 +1,87 @@
 .skills {
-    background: green;
-    height: 100vh;
+    background: black;
+    height: 90vh;
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.skills-title {
+    /* background: red; */
+    height: 15%;
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 60px;
+    color: white;
+}
+.skills-title > h1, .skills-title > h2 {
+    margin: 0;
+    padding: 0;
+}
+.skills-title > h1 {
+    font-size: calc(40px + (80 - 40) * ((100vw - 300px) / (2000 - 300)));
+}
+.skills-title > h2 {
+    font-size: calc(20px + (40 - 20) * ((100vw - 300px) / (2000 - 300)));
+    font-weight: 500;
+}
+
+.skills-body {
+    /* background: orange; */
+    height: 50%;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    margin-top: 20px;
+}
+
+
+.skill-box {
+    /* background: blue; */
+    height: 40vh;
+
+}
+.skill-card {
+    /* background: orange; */
+    height: 90%;
+    width: 100%;
+    margin: 10px 20px ;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+.skill-card:active, .skill-box:active, .slick-slide:active, .slick-active:active {
+    outline: none;
+}
+.skill-card:focus, .skill-box:focus, .slick-slide:focus, .slick-active:focus {
+    outline: none;
+}
+
+.skill-card-top{
+    background: white;
+    border-radius: 10px;
+    height: 90%;
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    box-shadow: 0px 0px 25px 15px grey;
+    
+}
+
+.skill-card-top > img {
+    height: 60%;
+    margin-right: 10px;;
+}
+.skill-card-top > h1 {
+    margin: 10px;
 }
