working on project section

--- a/src/Components/Projects/projects.css
+++ b/src/Components/Projects/projects.css
@@ -1,6 +1,6 @@
 .projects {
-    height: 100vh;
-    width: 100%;
+    height: 1000px;
+    width: 100vw;
     display: flex;
     margin: 50px 0;
     justify-content: center;
@@ -11,12 +11,13 @@
 }
 
 .projects-title {
-    height: 15%;
+    height: 150px;
     width: 70%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    /* background: red; */
 }
 .projects-title > h1 {
     padding: 0;
@@ -32,8 +33,9 @@
 
 .projects-div {
     background: #FCFCFC;
-    height: 70%;
-    width: 70%;
+    /* background: green; */
+    /* height: 500px; */
+    width: 70vw;
     margin-top: 20px;
     margin-bottom: 50px;
     border-radius: 25px;
@@ -44,6 +46,7 @@
     align-items: center;
     flex-direction: column;
     overflow: hidden;
+
     /* min-height: 500px; */
 }
 
@@ -51,23 +54,34 @@
 .center {
     height: 100%;
     width: 100%;
+    /* background: orange; */
 }
 
 .projects-carousel {
-    height: 15%;
+    height: 100px;
     width: 100%;
     display: flex;
+    background: green;
+    align-items: center;
+    justify-content: center;
 }
 
 .project-option {
-    height: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* margin-top: 30px; */
+    /* background: blue; */
 }
 .project-option > h1 {
     font-size: calc(20px + (30 - 20) * ((100vw - 300px) / (2000 - 300)));
     font-weight: bold;
     display: flex;
     justify-content: center;
-    height: 100%;
+    height: 100px;
+    /* background: red; */
+    align-items: center;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -78,18 +92,19 @@
 
 
 .projects-info {
-    height: 75%;
+    height:600px;
     width: 100%;
+    /* background: red; */
 }
 
 
 .project-card {
-    height: 50vh;
+    height: 600px;
     display: flex;
     justify-content: center;
     align-items: flex-end;;
     /* min-height: 400px; */
-
+    /* background: orange; */
 }
 
 .pc-real {
@@ -98,6 +113,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    /* background: blue; */
 }
 
 
@@ -108,11 +124,12 @@
 
 .p-info {
     /* background: red; */
-    height: 95%;
+    height: 100%;
     width: 50%;
     display: flex;
     flex-direction: column;
     justify-content: center;
+    /* align-items: center; */
 }
 .p-info > h1 {
     margin: 0;
@@ -146,22 +163,23 @@
     align-items: center;
 }
 .p-bw-top > h1 {
-    font-size: calc(18px + (28 - 18) * ((100vw - 300px) / (2000 - 300)));
+    font-size: calc(18px + (28 - 18) * ((100vw - 300px) / (1700 - 300)));
 }
 .p-bw-bottom {
     display: flex;
     height: 50%;
     width: 100%;
+    /* background: red; */
     justify-content: flex-start;
 }
 .p-bw-bottom > h1 {
     font-weight: 500;
     margin: 0 20px;
-    font-size: calc(16px + (24 - 16) * ((100vw - 300px) / (2000 - 300)));
+    font-size: calc(16px + (24 - 16) * ((100vw - 300px) / (1700 - 300)));
 }
 
 .project-buttons {
-    height: 25%;
+    height: 100px;
     width: 90%;
     display: flex;
     justify-content: space-between;
@@ -195,7 +213,7 @@
 }
 
 
-@media screen and (max-width: 600px){
+@media screen and (max-width: 699px){
     .projects-div {
         width: 90%;
         height: 65%;
@@ -212,7 +230,12 @@
         width: 85%;
     }
     .projects {
-        height: 90vh;
+        height: 900px;
+    }
+
+    .p-info {
+        /* background: blue; */
+        height: 450px;
     }
 }
 
@@ -220,34 +243,45 @@
 /* Screen sizes width 999px - 700px */
 @media screen and (max-width: 999px ) and (min-width: 700px){
     .projects-div {
-        width: 90%;
+        width: 70%;
+        /* height: 1000px; */
+        background :red;
         
     }
     .projects {
-        height: 80vh;
+        height: 1000px;
+        /* background: red; */
     }
     .p-info {
-        width: 60%;
-        height: 90%;
+        /* width: 50%; */
+        height: 100%;
+        /* background: blue; */
     }
     .projects-carousel {
-        height: 10%;
+        height: 100px !important;
+    }
+    .project-image {
+        height: 200px;
+        background: pink;
     }
 }
 
 
 /* Screen sizes width 699px - 300px */
-@media screen and (max-width: 699px ) and (min-width: 300px){
+@media screen and (max-width: 999px ) and (min-width: 300px){
     .projects-div {
         width: 95%;
-        height: 85%;
+        /* height: 1000px; */
+        /* padding: 30px; */
     }
     .projects {
-        height: 110vh;
+        /* height: 800px; */
     }
     .p-info {
         width: 90%;
-        height: 60%;
+        /* height: 60%; */
+        /* padding: 30px; */
+        background: orange;
     }
     .projects-carousel {
         height: 10%;
@@ -255,7 +289,8 @@
 
     .pc-real {
         flex-direction: column;
-        height: 70vh;
+        height: 500px;
+        background: green;
     }
 
     .project-card {
@@ -263,11 +298,15 @@
     }
 
     .project-image {
-        height: 40%;
+        height: 500px;
+        /* background: blue; */
+        width: 100%;
     }
-    .project-info {
+    .project-info > .slick-slider, .projects-info > .slick-initializer {
         height: 100%;
     }
+
+
     .project-buttons {
         width: 100%;
     }
