--- a/src/Components/Projects/projects.css
+++ b/src/Components/Projects/projects.css
@@ -10,6 +10,17 @@
 
 }
 
+
+.tech-icon {
+    width: 40px;
+    margin: 0 10px;
+    height: 40px;
+}
+.tech-icon > img {
+    /* width: 100%; */
+    height: 100%;
+}
+
 .projects-title {
     height: 150px;
     width: 70%;
@@ -58,16 +69,17 @@
 }
 
 .projects-carousel {
-    height: 100px;
+    height: 50px;
     width: 100%;
     display: flex;
-    background: green;
+    margin: 20px 0;
+    /* background: green; */
     align-items: center;
     justify-content: center;
 }
 
 .project-option {
-    height: 100px;
+    height: 50px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -79,7 +91,7 @@
     font-weight: bold;
     display: flex;
     justify-content: center;
-    height: 100px;
+    height: 50px;
     /* background: red; */
     align-items: center;
     font-family: Arial, Helvetica, sans-serif;
@@ -92,7 +104,7 @@
 
 
 .projects-info {
-    height:600px;
+    height:100%;
     width: 100%;
     /* background: red; */
 }
@@ -118,8 +130,21 @@
 
 
 .project-image {
-    height: 95%;
-    width: 30%;
+    height: 70%;
+    width: 35%;
+    /* background: red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
+    margin-right: 40px;
+    border-radius: 20px;;
+    box-shadow: 10px 0px 20px 1px rgba(11, 11, 11, 0.5);
+
+}
+.project-image > img {
+    /* width: 100%; */
+    height: 100%;
 }
 
 .p-info {
@@ -130,6 +155,7 @@
     flex-direction: column;
     justify-content: center;
     /* align-items: center; */
+
 }
 .p-info > h1 {
     margin: 0;
@@ -212,22 +238,10 @@
     background: #5D5D5D;
 }
 
-
-@media screen and (max-width: 699px){
-    .projects-div {
-        width: 90%;
-        height: 65%;
-    }
-    .projects-title{
-        height: 10%;
-        width: 90%;
-    }
-}
-
 /* Screen sizes width 1300px - 1000px */
 @media screen and (max-width: 1300px ) and (min-width: 1000px){
     .projects-div {
-        width: 85%;
+        width: 90%;
     }
     .projects {
         height: 900px;
@@ -241,56 +255,94 @@
 
 
 /* Screen sizes width 999px - 700px */
-@media screen and (max-width: 999px ) and (min-width: 700px){
+@media screen and (max-width: 999px ) and (min-width: 600px){
     .projects-div {
-        width: 70%;
-        /* height: 1000px; */
-        background :red;
+        width: 90%;
+        justify-content: center;
+        align-items: center;
+        height: 1200px;
         
     }
-    .projects {
-        height: 1000px;
-        /* background: red; */
-    }
-    .p-info {
-        /* width: 50%; */
+
+    
+    .project-card {
         height: 100%;
-        /* background: blue; */
     }
-    .projects-carousel {
-        height: 100px !important;
+    .pc-real {
+        flex-direction: column;
+        height: 100%;
+        /* background: orange; */
     }
+
     .project-image {
-        height: 200px;
-        background: pink;
+        height: 350px;
+        width: 70%;
+        margin: 30px 0;
+    }
+    
+    .p-info {
+        height: 50%;
+        width: 90%;
+        align-items: center;
+        /* background: blue; */
+        /* margin: 40px 0; */
+    }
+    .p-info > p {
+        margin: 10px 0;
+        width: 100%;
+        text-align: center
+    }
+
+    .p-bw-top, .p-bw-bottom {
+        justify-content: center;
+    }.p-bw-top > h1 {
+        margin: 5px;
     }
 }
 
 
-/* Screen sizes width 699px - 300px */
-@media screen and (max-width: 999px ) and (min-width: 300px){
+/* Screen sizes width 599px - 300px */
+@media screen and (max-width: 599px ){
     .projects-div {
         width: 95%;
-        /* height: 1000px; */
-        /* padding: 30px; */
+        height: 1200px;
+    }
+    .projects-title{
+        height: 100px;
+        width: 90%;
     }
     .projects {
         /* height: 800px; */
+        margin: 100px 0;
+        /* background: red; */
     }
     .p-info {
-        width: 90%;
-        /* height: 60%; */
-        /* padding: 30px; */
-        background: orange;
+        width: 95%;
+        height: 400px;
+        align-items: center;
+        margin-bottom: 40px;
+        /* background: orange; */
     }
+    .p-info > p {
+        text-align: center;
+        margin: 10px 0;
+    }
+
+    .p-bw-top, .p-bw-bottom {
+        justify-content: center;
+    }.p-bw-top > h1 {
+        margin: 5px;
+        font-size: 22px;
+    }
+
     .projects-carousel {
         height: 10%;
+        margin-top: 40px;
     }
 
     .pc-real {
         flex-direction: column;
-        height: 500px;
-        background: green;
+        height: 100%;
     }
 
     .project-card {
@@ -298,22 +350,48 @@
     }
 
     .project-image {
-        height: 500px;
+        height: 300px;
         /* background: blue; */
-        width: 100%;
+        width: 95%;
+        margin: 40px 0;
     }
     .project-info > .slick-slider, .projects-info > .slick-initializer {
         height: 100%;
     }
 
-
     .project-buttons {
         width: 100%;
+        /* background: red; */
+        height: 30%;
+        margin: 20px 0;
+        flex-direction: column;
+    }
+
+    .project-buttons > button {
+        width: 95%;
+        height: 45%;
     }
 }
 
 
-@media screen and (min-width: 1800px){
+@media screen and (min-width: 1900px){
+    .projects-div {
+        height: 1000px;
+    }
+    .project-card {
+        height: 800px;
+        /* background: green; */
+    }
+    .projects-carousel {
+        height: 100px;
+    }
+    
+    .pc-real {
+        height: 100%;
+    }
+    .projects {
+        height: 1500px;
+    }
     .project-buttons > button > h1 {
         font-size: 35px;
     }
@@ -330,6 +408,21 @@
     }
     .p-info > h1 {
         font-size: 60px;
+    }
+
+    .project-image {
+        margin-right: 70px;
+        height: 90%;
+    }
+
+    .tech-icon {
+        height: 60px;
+        width: 60px;
+    }
+
+    .project-buttons  {
+        /* background: red; */
+        height: 20%;
     }
 
     .project-option > h1 {
