--- a/src/Components/NavBar/navbar.css
+++ b/src/Components/NavBar/navbar.css
@@ -2,4 +2,24 @@
     height: 10vh;
     width: 100%;
     background: black;
+    display: flex;
+    justify-content: center;
+    position: fixed;
+    z-index: 5;
+}
+
+.nav-logo {
+    /* background: blue; */
+    height: 100%;
+    width: 30%;
+}
+
+.nav-logo > img {
+    height: 100%;
+}
+
+.nav-links {
+    height: 100%;
+    width: 50%;
+    background: green;
 }
