working on the navbar still

--- a/src/Components/NavBar/Hamburger/Togglebutton/togglebutton.css
+++ b/src/Components/NavBar/Hamburger/Togglebutton/togglebutton.css
@@ -9,7 +9,7 @@
     width: 50px;
     padding: 0;
     box-sizing: border-box;
-    margin-left: 25px;
+    /* margin-left: 25px; */
     /* background: red; */
 }
 
