--- a/src/Components/NavBar/Hamburger/Backdrop/backdrop.css
+++ b/src/Components/NavBar/Hamburger/Backdrop/backdrop.css
@@ -3,7 +3,7 @@
     width: 100%;
     height: 100%;
     background: rgba(0,0,0,0.3);
-    z-index: 100;
-    top: 0;
+    z-index: 3;
+    top: 70px;
     right: 0;
 }
