--- a/src/Components/NavBar/Hamburger/Togglebutton/togglebutton.css
+++ b/src/Components/NavBar/Hamburger/Togglebutton/togglebutton.css
@@ -9,6 +9,7 @@
     width: 50px;
     padding: 0;
     box-sizing: border-box;
+    z-index: 15;
     /* margin-left: 25px; */
     /* background: red; */
 }
