--- a/src/Components/Projects/projects.css
+++ b/src/Components/Projects/projects.css
@@ -12,9 +12,13 @@
 
 
 .tech-icon {
-    width: 40px;
+    width: 50px;
     margin: 0 10px;
-    height: 40px;
+    height: 50px;
+    /* background: red; */
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .tech-icon > img {
     /* width: 100%; */
